@@ -261,8 +261,9 @@ IF(NOT DEFINED _MANAGE_MAINTAINER_TARGETS_CMAKE_)
 
 	    ## Target: release
 	    IF(NOT DEFINED RELEASE_TARGETS)
-		SET(RELEASE_TARGETS koji_scratch_build tag upload rpmlint fedpkg_commit
-		    fedpkg_build bodhi_new changelog_update commit_after_release
+		SET(RELEASE_TARGETS koji_scratch_build tag upload rpmlint
+		    fedpkg_commit fedpkg_build bodhi_new
+		    changelog_update commit_after_release
 		    push_svc_tags)
 	    ENDIF(NOT DEFINED RELEASE_TARGETS)
 
