@@ -4,7 +4,7 @@ Release:    1%{?dist}
 Summary:    @PRJ_SUMMARY@
 License:    @LICENSE@
 Group:      System Environment/Libraries
-URL:        http://git.fedorahosted.org/git/?p=%{name}.git
+URL:        https://fedorahosted.org/%{name}/
 Source0:    https://fedorahosted.org/releases/c/m/%{name}/%{name}-%{version}-Source.@PACK_SOURCE_FILE_EXTENSION@
 
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
