@@ -1,4 +1,4 @@
-PRJ_VER=0.4.2
+PRJ_VER=0.4.3
 SUMMARY=Fixed 670079,671063; Fixed UseUninstall;More informative error message.
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=670079,671063
@@ -11,4 +11,5 @@ REDHAT_BUGZILLA=670079,671063
   should not depend on "koji_scratch_build"
 - Protocol for hosting server should now be specified as "[Hosting]_PROTOCOL".
 - Refactoring ManageMaintainerTargets.
+- fedpkg and koji build for every branches are revealed.
 
